# revpi-eol-provisioner

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  config.py  provisioner.py  pyproject.toml  requirements.txt  setup.py  validate-config.py
.github/workflows/: linter.yml  validate-device-config-files.yml
devices/: _core-2022.yaml  _core.yaml
revpi_provisioning/: __init__.py  __main__.py  config.py  hat.py  revpi.py  utils.py
revpi_provisioning/cli/: __init__.py  __main__.py  clear_hat.py  dump_hat.py  provisioner.py  utils.py  validate-config.py  validator.py
revpi_provisioning/devices/: FE0365R00.yaml  PR100301R00.yaml  PR100306R02.yaml  PR100328R14.yaml  PR100333R01.yaml  PR100333R02.yaml  PR100333R03.yaml  PR100338.yaml  PR100338R01.yaml  PR100358.yaml  PR100358R01.yaml  PR100358R02.yaml  PR100359R00.yaml  PR100360R00.yaml  PR100365.yaml  PR100367R00.yaml  PR100371.yaml  PR100371R01.yaml  PR100375.yaml  PR100375R01.yaml  PR100380R00.yaml  PR100383.yaml  PR100385.yaml  PR100385R00.yaml  PR100388R00.yaml  PR100401.yaml  PR100402R00.yaml  PR100411.yaml  PR100411R01.yaml  PR100417.yaml  PR100419R00.yaml  PR100420.yaml  flat-rd.yaml
revpi_provisioning/network/: __init__.py  board.py  pcie.py  spi.py  usb.py  utils.py
tests/: test_configs.py
